--- a/Random Forest Model Training.ipynb
+++ b/Random Forest Model Training.ipynb
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "67eb89bb-8711-47cf-9434-2dfbc3e8b22c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resumeplt.style.use('seaborn-v0_8-dark')"
+    "plt.style.use('seaborn-v0_8-dark')"
    ]
   },
   {
