--- a/Notebook/Random Forest Model Training.ipynb
+++ b/Notebook/Random Forest Model Training.ipynb
@@ -246,6 +246,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "195f900f",
+   "metadata": {},
+   "source": [
+    "# **Model Training**\n",
+    "### RandomForestClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "9d55f6f3-15bb-49bd-a98c-645d46ac14e8",
