--- a/Notebook/Random Forest Model Training.ipynb
+++ b/Notebook/Random Forest Model Training.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "d0499f28-5057-42ad-87e9-44414a3da93b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from pypdf import PdfReader # Read pdf\n",
+    "from pypdf import PdfReader # Read pdfs\n",
     "import seaborn as sns\n",
     "\n",
     "\n",
